--- a/index.html
+++ b/index.html
@@ -6,47 +6,16 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: targets1.mind;" color-space="sRGB" height="0.8" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
-      <a-assets>
-        <video id="card1" autoplay loop="true" src="v1.mp4"></video>
-        <!-- <img id="card1" src="b1.png" /> -->
-        <!-- <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item> -->
-      </a-assets>
+   <a-scene mindar-image="imageTargetSrc: targets1.mind;" embedded>
+  <a-assets>
+    <video id="card1" src="v1.mp4" preload="auto" loop muted playsinline webkit-playsinline crossorigin="anonymous"></video>
+  </a-assets>
 
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;">
-        <a-plane src="#card1" position="0 0 0" rotation="0 0 0" scale="1.0 1.5 1.0" alpha-test="1" opacity="1"></a-plane>
-        <!-- <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"> -->
-      </a-entity>
-      
-    </a-scene>
+  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-    <a-scene mindar-image="imageTargetSrc: targets2.mind;" color-space="sRGB" height="0.8" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
-      <a-assets>
-        <video id="card2" autoplay loop="true" src="v2.mp4"></video>
-        <!-- <img id="card2" src="b2.jpg" /> -->
-        <!-- <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item> -->
-      </a-assets>
-
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;">
-        <a-plane src="#card2" position="0 0 0" rotation="0 0 0" scale="1.0 1.5 1.0" alpha-test="1" opacity="1"></a-plane>
-        <!-- <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"> -->
-      </a-entity>
-    </a-scene>
-
-    <a-scene mindar-image="imageTargetSrc: targets3.mind;" color-space="sRGB" height="0.8" width="0.5" renderer="colorManagement: true; physicallyCorrectLights: true" vr-mode-ui="enabled: false" light="defaultLightsEnabled: false" device-orientation-permission-ui="enabled: false">
-      <a-assets>
-        <video id="card3" autoplay loop="true" src="v3.mp4"></video>
-        <!-- <img id="card3" src="b3.jpg" /> -->
-        <!-- <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item> -->
-      </a-assets>
-
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity mindar-image-target="targetIndex: 0" light="type: ambient; intensity: 1;">
-        <a-plane src="#card3" position="0 0 0" rotation="0 0 0" scale="1.0 1.5 1.0" alpha-test="1" opacity="1"></a-plane>
-         <!-- <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"> -->
-      </a-entity>
-    </a-scene>
+  <a-entity mindar-image-target="targetIndex: 0">
+    <a-video src="#card1" width="1.5" height="0.84375" position="0 0 0"></a-video>
+  </a-entity>
+</a-scene>
   </body>
 </html>
